Save work for appointments
